# CopyOnWrite

./: CMakeLists.txt  README.md
Example/: CMakeLists.txt  main.cpp
Include/CopyOnWrite/: CopyOnWrite.h
Tests/: CMakeLists.txt  Tests.cpp
